# VirtuaCam

./: .gitignore  Check-LegacyCompatibility.ps1  Common.h  DirectPortVirtuaCam.def  DirectPortVirtuaCamDLL.cpp  DirectPortVirtuaCamEXE.cpp  Install-VirtuaCam.ps1  LICENSE  README.md  README_Deployment.md  Resource.h  Resource.rc  VirtuaCam_Machine.iss  VirtuaCam_User.iss  build.ps1  setup.bat  setup.ps1
Examples/: DirectPortBufferToTextureD3D11.cpp  DirectPortBufferToTextureD3D12.cpp  DirectPortCamera.cpp  DirectPortCapture.cpp  DirectPortConsumerD3D11.cpp  DirectPortConsumerD3D12.cpp  DirectPortMultiplexerD3D11.cpp  DirectPortMultiplexerD3D12.cpp  DirectPortNumpy.cpp  DirectPortNumpy.h  DirectPortProducerD3D11.cpp  DirectPortProducerD3D12.cpp  DirectPortShaderFilterD3D11.cpp  DirectPortShaderFilterD3D12.cpp  DirectPortShaderProducerD3D11.cpp  DirectPortShaderProducerD3D12.cpp  DirectPortTextureToBufferD3D11.cpp  DirectPortTextureToBufferD3D12.cpp
VirtuaCam/: build.ps1
VirtuaCam/src/: CMakeLists.txt
VirtuaCam/src/DirectPortVirtuaCam/: Activator.cpp  App.cpp  App.h  App.rc  Broker.cpp  BrokerClient.cpp  BrokerClient.h  CameraModule.cpp  CameraModule.h  Consumer.cpp  Consumer.h  Enumerator.h  Guids.h  MediaSource.h  MediaStream.cpp  Menu.cpp  Menu.h  Resource.h  Tools.cpp  Tools.h  UI.cpp  UI.h  VirtualCamera.cpp  VirtualCamera.h  WASAPI.h  pch.h
VirtuaCam/src/VirtuaCam/: App.cpp  App.h  App.rc  Broker.cpp  Broker.h  BrokerClient.cpp  BrokerClient.h  CameraModule.cpp  CameraModule.h  Client.cpp  Client.h  Consumer.cpp  Consumer.h  Discovery.cpp  Discovery.h  GraphicsCapture.cpp  GraphicsCapture.h  Guids.cpp  Guids.h  MFActivate.cpp  MFActivate.h  MFSource.cpp  MFSource.h  MFStream.cpp  MFStream.h  Menu.cpp  Menu.h  Multiplexer.cpp  Multiplexer.h  Process.cpp  Process.h  Process.rc  Resource.h  UI.cpp  UI.h  Utilities.cpp  Utilities.h  WASAPI.cpp  pch.h
docs/: VIRTUAL_DISPLAY_DRIVER.md  WINDOWS_SERVICE.md
installer/: VirtuaCam.iss
scripts/: build_virtuacam.ps1  create_installer.ps1  install_powershell7.ps1  setup_deps.ps1  setup_preflight.ps1
src/: CMakeLists.txt
src/VirtuaCam/: Activator.h  App.cpp  App.h  Broker.cpp  BrokerClient.cpp  BrokerClient.h  CameraModule.cpp  Consumer.cpp  Discovery.cpp  Discovery.h  Enumerator.cpp  Formats.cpp  Formats.h  GraphicsCapture.cpp  Guids.cpp  Guids.h  MFActivate.cpp  MFActivate.h  MFCamera.cpp  MFClient.cpp  MFClient.h  MFGraphicsCapture.cpp  MFGraphicsCapture.h  MFSource.cpp  MFSource.h  MFStream.cpp  MFStream.h  MediaSource.cpp  Menu.cpp  Menu.h  Multiplexer.cpp  Multiplexer.h  NoSignalMask.h  Process.cpp  Process.h  Process.rc  Resource.h  ShaderModule.cpp  ShaderModule.h  Tools.cpp  (+7 more)
tools/: gen_nosignal_mask.py
